--- a/friends.html
+++ b/friends.html
@@ -32,6 +32,13 @@
     </div>
   </header>
 
+  <a href="#" id="friends-display-link">
+    <span><i class="fas fa-info-circle"></i></span>
+    <span>Friends' Names Display</span>
+    <span><i class="fas fa-chevron-right fa-xs"></i></span>
+
+  </a>
+
   <nav class="nav"> 
       <ul class="nav__list">
           <li class="nav__btn"> 
