create user-component and friends-screen__chanel

--- a/friends.html
+++ b/friends.html
@@ -36,8 +36,41 @@
     <span><i class="fas fa-info-circle"></i></span>
     <span>Friends' Names Display</span>
     <span><i class="fas fa-chevron-right fa-xs"></i></span>
-
   </a>
+
+  <main class="friends-screen">
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="https://avatars.githubusercontent.com/u/62169861?v=4"
+          class="user-component__avatar user-component__avatar--xl">
+        <div class="user-component__text">
+          <h4 class="user-component__title">Nicolas</h4>
+          <!-- <h6 class="user-component__subtitle">subtitle</h6> -->
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+    <div class="friends-screen__chanel">
+      <div class="friends-screen__chanel__header">
+        <span>Channel</span>
+        <i class="fas fa-chevron-up fa-xs"></i>
+      </div>
+    </div>
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="https://avatars.githubusercontent.com/u/62169861?v=4"
+          class="user-component__avatar user-component__avatar--sm">
+        <div class="user-component__text">
+          <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+          <!-- <h6 class="user-component__subtitle">subtitle</h6> -->
+        </div>
+      </div>
+      <div class="user-component__column">
+        <span>2</span>
+        <i class="fas fa-chevron-right fa-xs"></i>
+      </div>
+    </div>
+  </main>
 
   <nav class="nav"> 
       <ul class="nav__list">
