--- a/friends.html
+++ b/friends.html
@@ -65,9 +65,11 @@
           <!-- <h6 class="user-component__subtitle">subtitle</h6> -->
         </div>
       </div>
-      <div class="user-component__column">
-        <span>2</span>
-        <i class="fas fa-chevron-right fa-xs"></i>
+      <div class="user-component__column user-component__column--row-center">
+        <div>
+          <span>2</span>
+          <i class="fas fa-chevron-right fa-xs"></i>
+        </div>
       </div>
     </div>
   </main>
@@ -80,8 +82,8 @@
               </a>
           </li>
           <li class="nav__btn"> 
-              <a class="nav__link" href="chat.html">
-                <span class="nav__notification">1</span>
+              <a class="nav__link" href="chats.html">
+                <span class="nav__notification badge">1</span>
                 <i class="far fa-comment fa-2x"></i>
               </a>
           </li>
@@ -91,7 +93,7 @@
               </a>
           </li>
           <li class="nav__btn"> 
-              <a class="nav__link" href="find.hmtl">
+              <a class="nav__link" href="more.hmtl">
                 <span class="nav__dot"></span>
                 <i class="fas fa-ellipsis-h fa-2x "></i>
               </a>
