clear find.html.css and more.html/css

--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Chats - Kokoa Clone</title>
+  <title>More - Kokoa Clone</title>
 </head>
 <body>
   
@@ -25,44 +25,66 @@
   </div>
 
   <header class="screen-header">
-    <h1 class="screen-header__title">Chats</h1>
+    <h1 class="screen-header__title">More</h1>
     <div class="screen-header__icon">
       <span><i class="fas fa-search fa-2x"></i></span>
-      <span><i class="far fa-comment-dots fa-2x"></i></span>
       <span><i class="fas fa-music fa-2x"></i></span>
-      <span><i class="fas fa-cog fa-2x"></i></span>
+      <span>
+        <a href="settings.html">
+          <i class="fas fa-cog fa-2x"></i>
+          <div class="dot"></div>
+        </a>
+      </span>
     </div>
   </header>
 
-  <main class="friends-screen">
+  <main class="main-screen more-screen">
     <div class="user-component">
       <div class="user-component__column">
         <img src="https://avatars.githubusercontent.com/u/62169861?v=4"
-          class="user-component__avatar">
+          class="user-component__avatar user-component__avatar--xl">
         <div class="user-component__text">
           <h4 class="user-component__title">Nicolas</h4>
-          <h6 class="user-component__subtitle">Please check My Kakao Account Info</h6>
+          <h6 class="user-component__subtitle">+ 787 666 999 <i style="color: red;" class="fas fa-info-circle"></i></h6>
         </div>
       </div>
       <div class="user-component__column">
-        <span class="user-component__time">21:22</span>
-        <div class="badge">1</div>
+        <i class="far fa-comment-alt fa-2x"></i>
       </div>
     </div>
-  </main>
-  <main class="friends-screen">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="https://avatars.githubusercontent.com/u/62169861?v=4"
-          class="user-component__avatar">
-        <div class="user-component__text">
-          <h4 class="user-component__title">Nicolas</h4>
-          <h6 class="user-component__subtitle">Please check My Kakao Account Info</h6>
-        </div>
+    <div class="icon-row">
+      <div class="icon-row__icon">
+        <i class="far fa-calendar-times"></i>
+        <span>Calendar</span>
       </div>
-      <div class="user-component__column">
-        <span class="user-component__time">21:22</span>
-        <div class="badge">1</div>
+      <div class="icon-row__icon">
+        <i class="far fa-smile-beam"></i>
+        <span>Emoticons</span>
+      </div>
+      <div class="icon-row__icon">
+        <i class="fas fa-paint-roller"></i>
+        <span>Themes</span>
+      </div>
+      <div class="icon-row__icon">
+        <i class="fas fa-file-invoice-dollar"></i>
+        <span>Account</span>
+      </div>
+    </div>
+    <div class="more-suggestions">
+      <h4 class="more-suggestions__title">Suggestions</h4>
+      <div class="more-suggestions__icons">
+        <div class="more-suggestions__icon">
+          <div class="more-suggestions__icon-image">
+            <i class="fas fa-quote-right"></i>
+          </div>
+          <span class="more-suggestions__icon-text">Kokoa Story</span>
+        </div>
+        <div class="more-suggestions__icon">
+          <div class="more-suggestions__icon-image">
+            <i class="fas fa-quote-right"></i>
+          </div>
+          <span class="more-suggestions__icon-text">Kokoa Story</span>
+        </div>
       </div>
     </div>
   </main>
@@ -77,7 +99,7 @@
         <li class="nav__btn"> 
             <a class="nav__link" href="chats.html">
               <span class="nav__notification badge">1</span>
-              <i class="fas fa-comment fa-2x"></i>
+              <i class="far fa-comment fa-2x"></i>
             </a>
         </li>
         <li class="nav__btn"> 
@@ -87,7 +109,7 @@
         </li>
         <li class="nav__btn"> 
             <a class="nav__link" href="more.html">
-              <span class="nav__dot"></span>
+              <span class="nav__dot dot"></span>
               <i class="fas fa-ellipsis-h fa-2x "></i>
             </a>
         </li>
