--- a/friends.html
+++ b/friends.html
@@ -88,12 +88,12 @@
               </a>
           </li>
           <li class="nav__btn"> 
-              <a class="nav__link" href="search.html">
+              <a class="nav__link" href="find.html">
                 <i class="fas fa-search fa-2x"></i>
               </a>
           </li>
           <li class="nav__btn"> 
-              <a class="nav__link" href="more.hmtl">
+              <a class="nav__link" href="more.html">
                 <span class="nav__dot"></span>
                 <i class="fas fa-ellipsis-h fa-2x "></i>
               </a>
