--- a/friends.html
+++ b/friends.html
@@ -1,109 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Friend - Kokoa Clone</title>
-</head>
-<body>
-  <div class="status-bar">
-    <div class="status-var__column">
-      <span>No Service</span>
-      <i class="fas fa-wifi"></i>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Friend - Kokoa Clone</title>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-var__column">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-var__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-var__column">
+        <span>110%</span>
+        <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
     </div>
-    <div class="status-var__column">
-      <span>18:43</span>
-    </div>
-    <div class="status-var__column">
-      <span>110%</span>
-      <i class="fas fa-battery-full fa-lg"></i>
-      <i class="fas fa-bolt"></i>
-    </div>
-  </div>
 
-  <header class="screen-header">
-    <h1 class="screen-header__title">Friends</h1>
-    <div class="screen-header__icon">
-      <span><i class="fas fa-search fa-2x"></i></span>
-      <span><i class="fas fa-music fa-2x"></i></span>
-      <span><i class="fas fa-cog fa-2x"></i></span>
-    </div>
-  </header>
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icon">
+        <span><i class="fas fa-search fa-2x"></i></span>
+        <span><i class="fas fa-music fa-2x"></i></span>
+        <span><i class="fas fa-cog fa-2x"></i></span>
+      </div>
+    </header>
 
-  <a href="#" id="friends-display-link">
-    <span><i class="fas fa-info-circle"></i></span>
-    <span>Friends' Names Display</span>
-    <span><i class="fas fa-chevron-right fa-xs"></i></span>
-  </a>
+    <a href="#" id="friends-display-link">
+      <span><i class="fas fa-info-circle"></i></span>
+      <span>Friends' Names Display</span>
+      <span><i class="fas fa-chevron-right fa-xs"></i></span>
+    </a>
 
-  <main class="friends-screen">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="https://avatars.githubusercontent.com/u/62169861?v=4"
-          class="user-component__avatar user-component__avatar--xl">
-        <div class="user-component__text">
-          <h4 class="user-component__title">Nicolas</h4>
-          <!-- <h6 class="user-component__subtitle">subtitle</h6> -->
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://avatars.githubusercontent.com/u/62169861?v=4"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Nicolas</h4>
+            <!-- <h6 class="user-component__subtitle">subtitle</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__chanel">
+        <div class="friends-screen__chanel__header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
-    <div class="friends-screen__chanel">
-      <div class="friends-screen__chanel__header">
-        <span>Channel</span>
-        <i class="fas fa-chevron-up fa-xs"></i>
-      </div>
-    </div>
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="https://avatars.githubusercontent.com/u/62169861?v=4"
-          class="user-component__avatar user-component__avatar--sm">
-        <div class="user-component__text">
-          <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-          <!-- <h6 class="user-component__subtitle">subtitle</h6> -->
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://avatars.githubusercontent.com/u/62169861?v=4"
+            class="user-component__avatar user-component__avatar--sm"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title user-component__title--not-bold">
+              Channel
+            </h4>
+            <!-- <h6 class="user-component__subtitle">subtitle</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column user-component__column--row-center">
+          <div>
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
         </div>
       </div>
-      <div class="user-component__column user-component__column--row-center">
-        <div>
-          <span>2</span>
-          <i class="fas fa-chevron-right fa-xs"></i>
-        </div>
-      </div>
-    </div>
-  </main>
+    </main>
 
-  <nav class="nav"> 
+    <nav class="nav">
       <ul class="nav__list">
-          <li class="nav__btn"> 
-              <a class="nav__link" href="friends.html">
-                <i class="fas fa-user fa-2x"></i>
-              </a>
-          </li>
-          <li class="nav__btn"> 
-              <a class="nav__link" href="chats.html">
-                <span class="nav__notification badge">1</span>
-                <i class="far fa-comment fa-2x"></i>
-              </a>
-          </li>
-          <li class="nav__btn"> 
-              <a class="nav__link" href="find.html">
-                <i class="fas fa-search fa-2x"></i>
-              </a>
-          </li>
-          <li class="nav__btn"> 
-              <a class="nav__link" href="more.html">
-                <span class="nav__dot"></span>
-                <i class="fas fa-ellipsis-h fa-2x "></i>
-              </a>
-          </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html">
+            <i class="fas fa-user fa-2x"></i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
+            <i class="far fa-comment fa-2x"></i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="find.html">
+            <i class="fas fa-search fa-2x"></i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="more.html">
+            <span class="nav__dot"></span>
+            <i class="fas fa-ellipsis-h fa-2x"></i>
+          </a>
+        </li>
       </ul>
-  </nav>
+    </nav>
+    <ul>
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+    </ul>
+    <div class="splash-screen">
+      <i class="fas fa-comment fa-2x"></i>
+    </div>
 
-  <script
+    <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
