clear media querry and finish kokoa clone 2021

--- a/friends.html
+++ b/friends.html
@@ -106,14 +106,12 @@
         </li>
       </ul>
     </nav>
-    <ul>
-      <li><span></span></li>
-      <li><span></span></li>
-      <li><span></span></li>
-      <li><span></span></li>
-    </ul>
     <div class="splash-screen">
       <i class="fas fa-comment fa-2x"></i>
+    </div>
+
+    <div id="no-moblie">
+      <span>Your screen is too Big</span>
     </div>
 
     <script
